--- a/stylee.css
+++ b/stylee.css
@@ -210,9 +210,9 @@ aside .wadah {
   padding: 0;
   margin: 30px auto;
 }
-.content-col .ctn {
+/* .content-col .ctn {
   margin-left: -100px;
-}
+} */
 
 /* Img Animation */
 .img {
@@ -321,8 +321,9 @@ footer {
   margin-top: 200px;
 }
 footer .wadah {
+  gap: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
 }
 footer img {
   width: 150px;
@@ -333,10 +334,13 @@ footer p,
 footer li {
   color: white;
 }
+/* footer p {
+  text-align: justify;
+} */
 footer .col .judul3 {
   margin-top: 60px;
   margin-bottom: 10px;
-  margin-left: 50px;
+  /* margin-left: 50px; */
   font-weight: bold;
   font-size: 20px;
 }
@@ -359,15 +363,15 @@ footer .media {
   flex-direction: row;
   display: flex;
 }
-footer.col {
+/* footer.col {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
-footer .wadah .footer-link {
+/* footer .wadah .footer-link {
   margin-left: 50px;
-}
+} */
 
 hr,
 .copyright {
@@ -425,6 +429,7 @@ hr,
 
   .col img {
     max-width: 90%;
+    margin-left: 25px;
   }
   .porto .foto {
     margin-top: 200px;
@@ -483,9 +488,24 @@ hr,
   .patner .wadah {
     margin-top: -50px;
   }
+  .patner .wadah .satu {
+    margin-left: 25px;
+  }
+  .patner .wadah .dua {
+    margin-left: 53px;
+  }
+  .patner .wadah .tiga {
+    margin-left: 28px;
+  }
+  .patner .wadah .empat {
+    margin-left: 33px;
+  }
+
   footer .wadah {
+    font-size: 10px;
     grid-template-columns: repeat(auto-fit, minmax(150px, auto));
   }
+
   .profil-content .wadah {
     font-size: 15px;
   }
